class_file/snapshots/jdk-java-lang-Exception.class.snap
---
source: class_file/src/lib.rs
expression: display
---
public class java.lang.Exception extends java.lang.Throwable
  minor version: 0
  major version: 68
  flags: (0x0021) ACC_PUBLIC, ACC_SUPER
  this_class: #19                      //java/lang/Exception
  super_class: #2                      //java/lang/Throwable
  interfaces: 0, fields: 1, methods: 5, attributes: 1
Constant pool:
   #1 = Methodref          #2.#3            // java/lang/Throwable."<init>":()V
   #2 = Class              #4               // java/lang/Throwable
   #3 = NameAndType        #5:#6            // "<init>":()V
   #4 = Utf8               java/lang/Throwable
   #5 = Utf8               <init>
   #6 = Utf8               ()V
   #7 = Methodref          #2.#8            // java/lang/Throwable."<init>":(Ljava/lang/String;)V
   #8 = NameAndType        #5:#9            // "<init>":(Ljava/lang/String;)V
   #9 = Utf8               (Ljava/lang/String;)V
  #10 = Methodref          #2.#11           // java/lang/Throwable."<init>":(Ljava/lang/String;Ljava/lang/Throwable;)V
  #11 = NameAndType        #5:#12           // "<init>":(Ljava/lang/String;Ljava/lang/Throwable;)V
  #12 = Utf8               (Ljava/lang/String;Ljava/lang/Throwable;)V
  #13 = Methodref          #2.#14           // java/lang/Throwable."<init>":(Ljava/lang/Throwable;)V
  #14 = NameAndType        #5:#15           // "<init>":(Ljava/lang/Throwable;)V
  #15 = Utf8               (Ljava/lang/Throwable;)V
  #16 = Methodref          #2.#17           // java/lang/Throwable."<init>":(Ljava/lang/String;Ljava/lang/Throwable;ZZ)V
  #17 = NameAndType        #5:#18           // "<init>":(Ljava/lang/String;Ljava/lang/Throwable;ZZ)V
  #18 = Utf8               (Ljava/lang/String;Ljava/lang/Throwable;ZZ)V
  #19 = Class              #20              // java/lang/Exception
  #20 = Utf8               java/lang/Exception
  #21 = Utf8               serialVersionUID
  #22 = Utf8               J
  #23 = Utf8               ConstantValue
  #24 = Long               -3387516993124229948l
  #26 = Utf8               Code
  #27 = Utf8               LineNumberTable
  #28 = Utf8               LocalVariableTable
  #29 = Utf8               this
  #30 = Utf8               Ljava/lang/Exception;
  #31 = Utf8               message
  #32 = Utf8               Ljava/lang/String;
  #33 = Utf8               cause
  #34 = Utf8               Ljava/lang/Throwable;
  #35 = Utf8               enableSuppression
  #36 = Utf8               Z
  #37 = Utf8               writableStackTrace
  #38 = Utf8               SourceFile
  #39 = Utf8               Exception.java
{
  static final long serialVersionUID;
    descriptor: J
    flags: (0x0018) ACC_STATIC, ACC_FINAL
    ConstantValue: long -3387516993124229948l
  
  public java.lang.Exception();
    descriptor: ()V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Throwable."<init>":()V
         4: return                  
      LineNumberTable:
        line 55: 0
        line 56: 4
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Ljava/lang/Exception;
  
  public java.lang.Exception(java.lang.String);
    descriptor: (Ljava/lang/String;)V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=2, locals=2, args_size=2
         0: aload_0                 
         1: aload_1                 
         2: invokespecial #7                  // Method java/lang/Throwable."<init>":(Ljava/lang/String;)V
         5: return                  
      LineNumberTable:
        line 67: 0
        line 68: 5
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        6     0  this   Ljava/lang/Exception;
           0        6     1  message Ljava/lang/String;
  
  public java.lang.Exception(java.lang.String, java.lang.Throwable);
    descriptor: (Ljava/lang/String;Ljava/lang/Throwable;)V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=3, locals=3, args_size=3
         0: aload_0                 
         1: aload_1                 
         2: aload_2                 
         3: invokespecial #10                 // Method java/lang/Throwable."<init>":(Ljava/lang/String;Ljava/lang/Throwable;)V
         6: return                  
      LineNumberTable:
        line 85: 0
        line 86: 6
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        7     0  this   Ljava/lang/Exception;
           0        7     1  message Ljava/lang/String;
           0        7     2  cause  Ljava/lang/Throwable;
  
  public java.lang.Exception(java.lang.Throwable);
    descriptor: (Ljava/lang/Throwable;)V
    flags: (0x0001) ACC_PUBLIC
    Code: 
      stack=2, locals=2, args_size=2
         0: aload_0                 
         1: aload_1                 
         2: invokespecial #13                 // Method java/lang/Throwable."<init>":(Ljava/lang/Throwable;)V
         5: return                  
      LineNumberTable:
        line 103: 0
        line 104: 5
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        6     0  this   Ljava/lang/Exception;
           0        6     1  cause  Ljava/lang/Throwable;
  
  protected java.lang.Exception(java.lang.String, java.lang.Throwable, boolean, boolean);
    descriptor: (Ljava/lang/String;Ljava/lang/Throwable;ZZ)V
    flags: (0x0004) ACC_PROTECTED
    Code: 
      stack=5, locals=5, args_size=5
         0: aload_0                 
         1: aload_1                 
         2: aload_2                 
         3: iload_3                 
         4: iload         4                 
         6: invokespecial #16                 // Method java/lang/Throwable."<init>":(Ljava/lang/String;Ljava/lang/Throwable;ZZ)V
         9: return                  
      LineNumberTable:
        line 123: 0
        line 124: 9
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0       10     0  this   Ljava/lang/Exception;
           0       10     1  message Ljava/lang/String;
           0       10     2  cause  Ljava/lang/Throwable;
           0       10     3  enableSuppression Z
           0       10     4  writableStackTrace Z
}
SourceFile: "Exception.java"
