class_file/snapshots/jdk-java-lang-Integer$IntegerCache.class.snap
---
source: class_file/src/lib.rs
expression: display
---
final class java.lang.Integer$IntegerCache 
  minor version: 0
  major version: 68
  flags: (0x0030) ACC_FINAL, ACC_SUPER
  this_class: #16                      //java/lang/Integer$IntegerCache
  super_class: #2                      //java/lang/Object
  interfaces: 0, fields: 5, methods: 2, attributes: 3
Constant pool:
    #1 = Methodref          #2.#3            // java/lang/Object."<init>":()V
    #2 = Class              #4               // java/lang/Object
    #3 = NameAndType        #5:#6            // "<init>":()V
    #4 = Utf8               java/lang/Object
    #5 = Utf8               <init>
    #6 = Utf8               ()V
    #7 = Class              #8               // java/lang/Integer
    #8 = Utf8               java/lang/Integer
    #9 = Methodref          #10.#11          // java/lang/Class.desiredAssertionStatus:()Z
   #10 = Class              #12              // java/lang/Class
   #11 = NameAndType        #13:#14          // desiredAssertionStatus:()Z
   #12 = Utf8               java/lang/Class
   #13 = Utf8               desiredAssertionStatus
   #14 = Utf8               ()Z
   #15 = Fieldref           #16.#17          // java/lang/Integer$IntegerCache.$assertionsDisabled:Z
   #16 = Class              #18              // java/lang/Integer$IntegerCache
   #17 = NameAndType        #19:#20          // $assertionsDisabled:Z
   #18 = Utf8               java/lang/Integer$IntegerCache
   #19 = Utf8               $assertionsDisabled
   #20 = Utf8               Z
   #21 = String             #22              // java.lang.Integer.IntegerCache.high
   #22 = Utf8               java.lang.Integer.IntegerCache.high
   #23 = Methodref          #24.#25          // jdk/internal/misc/VM.getSavedProperty:(Ljava/lang/String;)Ljava/lang/String;
   #24 = Class              #26              // jdk/internal/misc/VM
   #25 = NameAndType        #27:#28          // getSavedProperty:(Ljava/lang/String;)Ljava/lang/String;
   #26 = Utf8               jdk/internal/misc/VM
   #27 = Utf8               getSavedProperty
   #28 = Utf8               (Ljava/lang/String;)Ljava/lang/String;
   #29 = Methodref          #7.#30           // java/lang/Integer.parseInt:(Ljava/lang/String;)I
   #30 = NameAndType        #31:#32          // parseInt:(Ljava/lang/String;)I
   #31 = Utf8               parseInt
   #32 = Utf8               (Ljava/lang/String;)I
   #33 = Methodref          #34.#35          // java/lang/Math.max:(II)I
   #34 = Class              #36              // java/lang/Math
   #35 = NameAndType        #37:#38          // max:(II)I
   #36 = Utf8               java/lang/Math
   #37 = Utf8               max
   #38 = Utf8               (II)I
   #39 = Integer            2147483518
   #40 = Methodref          #34.#41          // java/lang/Math.min:(II)I
   #41 = NameAndType        #42:#38          // min:(II)I
   #42 = Utf8               min
   #43 = Class              #44              // java/lang/NumberFormatException
   #44 = Utf8               java/lang/NumberFormatException
   #45 = Fieldref           #16.#46          // java/lang/Integer$IntegerCache.high:I
   #46 = NameAndType        #47:#48          // high:I
   #47 = Utf8               high
   #48 = Utf8               I
   #49 = Methodref          #50.#51          // jdk/internal/misc/CDS.initializeFromArchive:(Ljava/lang/Class;)V
   #50 = Class              #52              // jdk/internal/misc/CDS
   #51 = NameAndType        #53:#54          // initializeFromArchive:(Ljava/lang/Class;)V
   #52 = Utf8               jdk/internal/misc/CDS
   #53 = Utf8               initializeFromArchive
   #54 = Utf8               (Ljava/lang/Class;)V
   #55 = Fieldref           #16.#56          // java/lang/Integer$IntegerCache.archivedCache:[Ljava/lang/Integer;
   #56 = NameAndType        #57:#58          // archivedCache:[Ljava/lang/Integer;
   #57 = Utf8               archivedCache
   #58 = Utf8               [Ljava/lang/Integer;
   #59 = Methodref          #7.#60           // java/lang/Integer.intValue:()I
   #60 = NameAndType        #61:#62          // intValue:()I
   #61 = Utf8               intValue
   #62 = Utf8               ()I
   #63 = Class              #64              // java/lang/AssertionError
   #64 = Utf8               java/lang/AssertionError
   #65 = Methodref          #63.#3           // java/lang/AssertionError."<init>":()V
   #66 = Methodref          #7.#67           // java/lang/Integer."<init>":(I)V
   #67 = NameAndType        #5:#68           // "<init>":(I)V
   #68 = Utf8               (I)V
   #69 = Fieldref           #16.#70          // java/lang/Integer$IntegerCache.cache:[Ljava/lang/Integer;
   #70 = NameAndType        #71:#58          // cache:[Ljava/lang/Integer;
   #71 = Utf8               cache
   #72 = Utf8               low
   #73 = Utf8               ConstantValue
   #74 = Integer            -128
   #75 = Utf8               RuntimeVisibleAnnotations
   #76 = Utf8               Ljdk/internal/vm/annotation/Stable;
   #77 = Utf8               Code
   #78 = Utf8               LineNumberTable
   #79 = Utf8               LocalVariableTable
   #80 = Utf8               this
   #81 = Utf8               Ljava/lang/Integer$IntegerCache;
   #82 = Utf8               <clinit>
   #83 = Utf8               i
   #84 = Utf8               c
   #85 = Utf8               j
   #86 = Utf8               archivedSize
   #87 = Utf8               h
   #88 = Utf8               integerCacheHighPropValue
   #89 = Utf8               Ljava/lang/String;
   #90 = Utf8               size
   #91 = Utf8               StackMapTable
   #92 = Class              #93              // java/lang/String
   #93 = Utf8               java/lang/String
   #94 = Class              #58              // "[Ljava/lang/Integer;"
   #95 = Utf8               SourceFile
   #96 = Utf8               Integer.java
   #97 = Utf8               NestHost
   #98 = Utf8               InnerClasses
   #99 = Utf8               IntegerCache
{
  static final int low;
    descriptor: I
    flags: (0x0018) ACC_STATIC, ACC_FINAL
    ConstantValue: int -128
  
  static final int high;
    descriptor: I
    flags: (0x0018) ACC_STATIC, ACC_FINAL
  
  static final java.lang.Integer[] cache;
    descriptor: [Ljava/lang/Integer;
    flags: (0x0018) ACC_STATIC, ACC_FINAL
    RuntimeVisibleAnnotations:
      0: #76()
        jdk.internal.vm.annotation.Stable
  
  static java.lang.Integer[] archivedCache;
    descriptor: [Ljava/lang/Integer;
    flags: (0x0008) ACC_STATIC
  
  static final boolean $assertionsDisabled;
    descriptor: Z
    flags: (0x1018) ACC_STATIC, ACC_FINAL, ACC_SYNTHETIC
  
  private java.lang.Integer$IntegerCache();
    descriptor: ()V
    flags: (0x0002) ACC_PRIVATE
    Code: 
      stack=1, locals=1, args_size=1
         0: aload_0                 
         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
         4: return                  
      LineNumberTable:
        line 983: 0
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
           0        5     0  this   Ljava/lang/Integer$IntegerCache;
  
  static {};
    descriptor: ()V
    flags: (0x0008) ACC_STATIC
    Code: 
      stack=5, locals=7, args_size=0
         0: ldc           #7                  // class java/lang/Integer
         2: invokevirtual #9                  // Method java/lang/Class.desiredAssertionStatus:()Z
         5: ifne          12                
         8: iconst_1                
         9: goto          13                
        12: iconst_0                
        13: putstatic     #15                 // Field $assertionsDisabled:Z
        16: bipush        127               
        18: istore_0                
        19: ldc           #21                 // String java.lang.Integer.IntegerCache.high
        21: invokestatic  #23                 // Method jdk/internal/misc/VM.getSavedProperty:(Ljava/lang/String;)Ljava/lang/String;
        24: astore_1                
        25: aload_1                 
        26: ifnull        50                
        29: aload_1                 
        30: invokestatic  #29                 // Method java/lang/Integer.parseInt:(Ljava/lang/String;)I
        33: bipush        127               
        35: invokestatic  #33                 // Method java/lang/Math.max:(II)I
        38: istore_0                
        39: iload_0                 
        40: ldc           #39                 // int 2147483518
        42: invokestatic  #40                 // Method java/lang/Math.min:(II)I
        45: istore_0                
        46: goto          50                
        49: astore_2                
        50: iload_0                 
        51: putstatic     #45                 // Field high:I
        54: ldc           #16                 // class java/lang/Integer$IntegerCache
        56: invokestatic  #49                 // Method jdk/internal/misc/CDS.initializeFromArchive:(Ljava/lang/Class;)V
        59: getstatic     #45                 // Field high:I
        62: bipush        -128              
        64: isub                    
        65: iconst_1                
        66: iadd                    
        67: istore_2                
        68: getstatic     #55                 // Field archivedCache:[Ljava/lang/Integer;
        71: ifnull        82                
        74: iload_2                 
        75: getstatic     #55                 // Field archivedCache:[Ljava/lang/Integer;
        78: arraylength             
        79: if_icmple     200               
        82: iload_2                 
        83: anewarray     #7                  // class java/lang/Integer
        86: astore_3                
        87: bipush        -128              
        89: istore        4                 
        91: getstatic     #55                 // Field archivedCache:[Ljava/lang/Integer;
        94: ifnonnull     101               
        97: iconst_0                
        98: goto          105               
       101: getstatic     #55                 // Field archivedCache:[Ljava/lang/Integer;
       104: arraylength             
       105: istore        5                 
       107: iconst_0                
       108: istore        6                 
       110: iload         6                 
       112: iload         5                 
       114: if_icmpge     164               
       117: aload_3                 
       118: iload         6                 
       120: getstatic     #55                 // Field archivedCache:[Ljava/lang/Integer;
       123: iload         6                 
       125: aaload                  
       126: aastore                 
       127: getstatic     #15                 // Field $assertionsDisabled:Z
       130: ifne          155               
       133: iload         4                 
       135: getstatic     #55                 // Field archivedCache:[Ljava/lang/Integer;
       138: iload         6                 
       140: aaload                  
       141: invokevirtual #59                 // Method java/lang/Integer.intValue:()I
       144: if_icmpeq     155               
       147: new           #63                 // class java/lang/AssertionError
       150: dup                     
       151: invokespecial #65                 // Method java/lang/AssertionError."<init>":()V
       154: athrow                  
       155: iinc          4, 1              
       158: iinc          6, 1              
       161: goto          110               
       164: iload         5                 
       166: istore        6                 
       168: iload         6                 
       170: iload_2                 
       171: if_icmpge     196               
       174: aload_3                 
       175: iload         6                 
       177: new           #7                  // class java/lang/Integer
       180: dup                     
       181: iload         4                 
       183: iinc          4, 1              
       186: invokespecial #66                 // Method java/lang/Integer."<init>":(I)V
       189: aastore                 
       190: iinc          6, 1              
       193: goto          168               
       196: aload_3                 
       197: putstatic     #55                 // Field archivedCache:[Ljava/lang/Integer;
       200: getstatic     #55                 // Field archivedCache:[Ljava/lang/Integer;
       203: putstatic     #69                 // Field cache:[Ljava/lang/Integer;
       206: getstatic     #15                 // Field $assertionsDisabled:Z
       209: ifne          228               
       212: getstatic     #45                 // Field high:I
       215: bipush        127               
       217: if_icmpge     228               
       220: new           #63                 // class java/lang/AssertionError
       223: dup                     
       224: invokespecial #65                 // Method java/lang/AssertionError."<init>":()V
       227: athrow                  
       228: return                  
      Exception table:
          from       to target type
            29       46    49  Class java/lang/NumberFormatException
      LineNumberTable:
        line 931: 0
        line 941: 16
        line 942: 19
        line 943: 21
        line 944: 25
        line 946: 29
        line 948: 39
        line 951: 46
        line 949: 49
        line 953: 50
        line 956: 54
        line 957: 59
        line 960: 68
        line 961: 82
        line 962: 87
        line 966: 91
        line 967: 107
        line 968: 117
        line 969: 127
        line 970: 155
        line 967: 158
        line 973: 164
        line 974: 174
        line 973: 190
        line 976: 196
        line 978: 200
        line 980: 206
        line 981: 228
      LocalVariableTable:
       Start   Length  Slot  Name   Signature
         110       54     6  i      I
         168       28     6  i      I
          87      113     3  c      [Ljava/lang/Integer;
          91      109     4  j      I
         107       93     5  archivedSize I
          19      209     0  h      I
          25      203     1  integerCacheHighPropValue Ljava/lang/String;
          68      160     2  size   I
      StackMapTable: number_of_entries = 14
        frame_type = 12 /* same */
        frame_type = 64 /* same_locals_1_stack_item */
          stack = [ int ]
        frame_type = 255 /* full_frame */
          offset_delta = 35
          locals = [int, class java/lang/String]
          stack = [class java/lang/NumberFormatException]
        frame_type = 0 /* same */
        frame_type = 252 /* append */
          offset_delta = 31
          locals = [int]
        frame_type = 253 /* append */
          offset_delta = 18
          locals = [class "[Ljava/lang/Integer;", int]
        frame_type = 67 /* same_locals_1_stack_item */
          stack = [ int ]
        frame_type = 253 /* append */
          offset_delta = 4
          locals = [int, int]
        frame_type = 44 /* same */
        frame_type = 250 /* chop */
          offset_delta = 8
        frame_type = 252 /* append */
          offset_delta = 3
          locals = [int]
        frame_type = 250 /* chop */
          offset_delta = 27
        frame_type = 248 /* chop */
          offset_delta = 3
        frame_type = 248 /* chop */
          offset_delta = 27
}
SourceFile: "Integer.java"
NestHost: class java/lang/Integer
InnerClasses:
  private static final #99= #16 of #7;        // IntegerCache=class java/lang/Integer$IntegerCache of class java/lang/Integer
